added svm model

--- a/Pectan/cluster.ipynb
+++ b/Pectan/cluster.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +24,13 @@
     "\n",
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.svm import OneClassSVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read Data"
    ]
   },
   {
@@ -145,6 +159,13 @@
    "source": [
     "data = pd.read_csv('orderbook_dataset')\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Data contains 100l rows and 9 columns"
    ]
   },
   {
@@ -325,6 +346,15 @@
    ],
    "source": [
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- From the description, ask count and volume clearly contain outliers and this outliers can be seen to be the ,ax value of he 2 columns.\n",
+    "\n",
+    "- Remove the outliers because they can affect the visual representation of the rest of our data points and can statistically affect other datapoints as well."
    ]
   },
   {
@@ -510,6 +540,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Data info shows that there are no missing value and all the features are either int or floats except for the datetime columns which will have to be converted to datetime."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -552,6 +589,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- From the plot above, the price for one is not stationary with time, there's also a pattern on the price with time.\n",
+    "- There are occasional upward spikes and sharp falls in price also accompanied by a normal movements.\n",
+    "\n",
+    "- To go on with the anomaly detection. Create a new dataframe without the datetime column."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -561,12 +608,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kmeans Cluster\n",
+    "- First an elbow plot to determine the number of clusters to use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "sse = {}\n",
     "# Fit KMeans and calculate SSE for each k\n",
     "for c in range(1, 10):\n",
@@ -603,6 +657,15 @@
     "plt.xlabel('No Of Clusters'); plt.ylabel('SSE')\n",
     "sns.pointplot(x=list(sse.keys()), y=list(sse.values()))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- From the above plot, the number of clusters to use is between 2 and 3. Any one the two numbers can be used.\n",
+    "\n",
+    "- Build a Kmeans model with 3 clusters.\n"
    ]
   },
   {
@@ -658,6 +721,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Find the number of components that explains the most variance in the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -676,12 +746,16 @@
    "source": [
     "new_df = new_data\n",
     "\n",
+    "#get the values of the data\n",
     "X = new_df.values\n",
+    "#scale the data using standard scaler\n",
     "std_scaler = StandardScaler()\n",
     "X_scaled = std_scaler.fit_transform(X)\n",
     "\n",
+    "#mean vectorizer of the scaled data\n",
     "mean_vec = np.mean(X_scaled, axis=0)\n",
     "\n",
+    "#covariance matrix, eigen values and vectors\n",
     "covariance_matrix = np.cov(X_scaled.T)\n",
     "eigen_values, eigen_vectors = np.linalg.eig(covariance_matrix)\n",
     "eigen_pairs = [np.absolute(eigen_values[i], eigen_vectors[:,i]) for i in range(len(eigen_values))]\n",
@@ -689,9 +763,12 @@
     "\n",
     "total = sum(eigen_values)\n",
     "\n",
+    "# get the variance explained and cummulative variance explained\n",
     "variance_explained = [(i/total) * 100 for i in sorted(eigen_values, reverse=True)]\n",
     "cummulative_variance_explained = np.cumsum(variance_explained)\n",
     "\n",
+    "\n",
+    "#plot of the principal components and explained variance\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.bar(range(len(variance_explained)), variance_explained,\n",
     "        alpha=0.3, \n",
@@ -708,6 +785,13 @@
     "plt.xlabel('Principal components')\n",
     "plt.legend(loc='best')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The first 4 componets explains over 80% of the variance with the first component explaining almost 40% variance."
    ]
   },
   {
@@ -835,6 +919,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create and scale the 4 new principal components"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -921,13 +1012,22 @@
     }
    ],
    "source": [
+    "# apply pca with 4 component analysis\n",
     "pca = PCA(n_components=4)\n",
     "new_df = pca.fit_transform(new_df)\n",
     "\n",
+    "#scale the new created columns and create a new dataframe\n",
     "std_scaler = StandardScaler()\n",
     "scaled = std_scaler.fit_transform(new_df)\n",
     "new_df = pd.DataFrame(scaled)\n",
     "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Train a kmeans cluster model on the new dataframe and combine them with the old data frame"
    ]
   },
   {
@@ -963,6 +1063,13 @@
     "new_data['principal_feature_4'] = new_df[3]\n",
     "\n",
     "new_data['cluster'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- From the 3 clusters, 1 has the lowest number with just 19 data points"
    ]
   },
   {
@@ -1124,6 +1231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Calculate the distance between each point and its nearest centroid. The biggest distances are considered as anomaly.\n",
+    "\n",
+    "- outlier fraction determine the percentage of outliers available in the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1153,6 +1269,15 @@
     "threshold = distance.nlargest(number_of_outliers).min()\n",
     "# anomaly1 contain the anomaly result of the above method Cluster (0:normal, 1:anomaly) \n",
     "new_data['anomaly1'] = (distance >= threshold).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plots of Principal Components against the Distance by Point Anomaly\n",
+    "\n",
+    "- Red Marks Represent the anomalies while the blue color represents the normal data."
    ]
   },
   {
@@ -1238,7 +1363,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1255,6 +1382,16 @@
    ],
    "source": [
     "new_data['anomaly1'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The distance by point anomaly detection returns 999 data points as anomaly while 98999 are identified as normal data points.\n",
+    "\n",
+    "\n",
+    "### Plot of Anomaly Detected of Price Against Datetime"
    ]
   },
   {
@@ -1289,6 +1426,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The red dots indicate datapoints identified as anomalies.\n",
+    "- Most of the red dots are at the highest and lowest points of a spike and sharp fall."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1317,7 +1462,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Isolation forest for Anomaly Detection"
+    "# Isolation forest for Anomaly Detection\n",
+    "\n",
+    "- Isolation Forest detects anomalies purely based on the fact that anomalies are data points that are few and different. The anomalies isolation is implemented without employing any distance or density measure. This method is fundamentally different from clustering based or distance based algorithms."
    ]
   },
   {
@@ -1522,11 +1669,13 @@
     }
    ],
    "source": [
+    "#scale the data\n",
     "scaler = StandardScaler()\n",
     "isolate_forest_scaled = scaler.fit_transform(isolate_forest)\n",
     "\n",
     "isolate_forest_df = pd.DataFrame(isolate_forest_scaled)\n",
     "\n",
+    "#instatiate the Isolation Forest model and fit on the scaled dataframe\n",
     "model = IsolationForest(contamination=outliers_fraction)\n",
     "model.fit(isolate_forest_df)\n",
     "\n",
@@ -1560,23 +1709,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The red dots here also represents the detected anomalies and se see that they are not spread accross multiple time frame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1, -1])"
+       " 1    98998\n",
+       "-1     1000\n",
+       "Name: anomaly2, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_data['anomaly2'].unique()"
+    "new_data['anomaly2'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 1000 data points are detected as anomalies, one greater than Kmeans."
    ]
   },
   {
@@ -1609,7 +1774,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support Vector Machine Based Anomaly Detection"
+    "- The stacked hist plot shows that there are more anomalies at the highest prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machine Based Anomaly Detection\n",
+    "\n",
+    "- The idea of SVM for anomaly detection is to find a function that is positive for regions with high density of points, and negative for small densities.\n",
+    "\n",
+    "- Used the one class support vector."
    ]
   },
   {
@@ -1627,14 +1803,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# instantiate and fit the standard scaler\n",
     "svm_scaler = StandardScaler()\n",
     "svm_data_scaled = svm_scaler.fit_transform(svm_data)\n",
     "svm_data_df = pd.DataFrame(svm_data_scaled)\n",
     "\n",
+    "#instantiate the model with the parameters nu and rbf kernel and gamma 0.01\n",
     "model = OneClassSVM(nu=outliers_fraction, kernel='rbf', gamma=0.01)\n",
     "model.fit(svm_data_df)\n",
     "\n",
+    "#make prediction on the uisolate forest dataframe\n",
     "new_data['anomaly3'] = pd.Series(model.predict(isolate_forest_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1    98998\n",
+       "-1     1000\n",
+       "Name: anomaly3, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data['anomaly3'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 1000 anomalies detected here also."
    ]
   },
   {
@@ -1665,6 +1873,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Red anomaly dots here are atleast spread accross the time frame."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -1691,11 +1906,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- The datcked histogram als"
+   ]
   }
  ],
  "metadata": {
